force-app/main/default/objects/THSK__New_Car_Survey__c/THSK__New_Car_Survey__c.object-meta.xml
<CustomObject>
    <label>New Car Survey</label>
    <nameField>
        <label>New Car Survey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Car Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>