force-app/main/default/objects/THSK__New_Car_Survey__c/fields/THSK__Customer__c.field-meta.xml
<CustomField>
    <fullName>THSK__Customer__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>