force-app/main/default/objects/THSK__New_Car_Survey__c/fields/THSK__Email__c.field-meta.xml
<CustomField>
    <fullName>THSK__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>