force-app/main/default/objects/THSK__New_Car_Survey__c/fields/THSK__Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>THSK__Exterior_Color__c</fullName>
    <label>Exterior Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>