force-app/main/default/objects/THSK__New_Car_Survey__c/fields/THSK__Manual_Transmission__c.field-meta.xml
<CustomField>
    <fullName>THSK__Manual_Transmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Transmission</label>
    <type>Checkbox</type>
</CustomField>