force-app/main/default/objects/THSK__New_Car_Survey__c/fields/THSK__Sunroof__c.field-meta.xml
<CustomField>
    <fullName>THSK__Sunroof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunroof</label>
    <type>Checkbox</type>
</CustomField>