force-app/main/default/objects/THSK__New_Car_Survey__c/fields/THSK__Type__c.field-meta.xml
<CustomField>
    <fullName>THSK__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coupe</fullName>
            </value>
            <value>
                <fullName>Minivan</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Wagon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>