force-app/main/default/objects/THSK__New_Car_Survey__c/listViews/THSK__All.listView-meta.xml
<ListView>
    <fullName>THSK__All</fullName>
    <columns>NAME</columns>
    <columns>THSK__Customer__c</columns>
    <columns>THSK__Email__c</columns>
    <columns>THSK__Type__c</columns>
    <columns>THSK__Exterior_Color__c</columns>
    <columns>THSK__Manual_Transmission__c</columns>
    <columns>THSK__X4_Wheel_Drive__c</columns>
    <columns>THSK__Sunroof__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>